--- a/traefik.yml
+++ b/traefik.yml
@@ -97,11 +97,11 @@ entryPoints:
   web:
     address: ":80"
     # redirect http to httpS
-    http:
-      redirections:
-        entryPoint:
-          to: websecure
-          scheme: https
+    # http:
+    #   redirections:
+    #     entryPoint:
+    #       to: websecure
+    #       scheme: https
   websecure:
     address: ":443"
 
